# Agora-Flutter-SDK

./: .cirrus.yml  .editorconfig  .gitignore  .gitmodules  .metadata  .pubignore  .release-it.json  AGENTS.md  Annotations.java  BeanCovertor.kt  BeanCovertor.swift  CHANGELOG.md  CONTRIBUTING.md  Callback.kt  Callback.swift  EnumCovertor.kt  Extensions.kt  Extensions.swift  LICENSE  MediaObserver.kt  MediaObserver.swift  README.jp.md  README.md  README.zh.md  RULES.md  RtcChannel.kt  RtcChannel.swift  RtcChannelEvent.kt  RtcChannelEvent.swift  RtcEngine.kt  RtcEngine.swift  RtcEngineEvent.kt  RtcEngineEvent.swift  RtcEnginePlugin.h  RtcEnginePluginRegistrant.h  RtcEngineRegistry.swift  RtcSurfaceView.kt  RtcSurfaceView.swift  RtcTextureView.kt  analysis_options.yaml  (+5 more)
android/: .gitignore  build.gradle  consumer-rules.pro  settings.gradle
android/src/main/cpp/: CMakeLists.txt  iris_rtc_rendering_android.cc  texture_render_logger.h  vm_util.h
assets/: AgoraRtcWrapper.bundle.custom.js  AgoraRtcWrapper.bundle.js
ci/: build_web.sh  dart_pub_publish_check.sh  dartfmt_check.sh  rendering_test_android.sh  rendering_test_ios.sh  rendering_test_macos.sh  rendering_test_windows.sh  run_android_test.sh  run_flutter_android_integration_test.sh  run_flutter_integration_test.sh  run_flutter_integration_test_android.sh  run_flutter_integration_test_ios.sh  run_flutter_integration_test_web.sh  run_flutter_ios_published_package_smoke_test.sh  run_flutter_macos_integration_test.sh  run_flutter_macos_published_package_smoke_test.sh  run_flutter_release_consumer_smoke_test.sh  run_flutter_windows_integration_test.sh  run_ios_test.sh  run_rendering_test.sh  run_rte_integration_test_android.sh  run_rte_integration_test_ios.sh  run_rte_integration_test_web.sh  run_test_shard.sh  run_update_deps.sh  setup-crash-dumps.ps1
docs/: CHANGELOG.archive.md
example/: .gitignore  README.md  README.zh.md  build_result.txt  example.md  pubspec.yaml
integration_test_app/: .metadata  README.md  pubspec.yaml
integration_test_app/iris_integration_test/: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-android.sh  build-ios.sh  build-macos.sh  copy-ios-framework.sh  to-framework-any.sh
integration_test_app/iris_integration_test/src/: fake_rtc_engine.h  fake_rtc_engine_internal.h  iris_rtc_engine_call_api_recorder.cc  iris_rtc_engine_call_api_recorder.h  iris_rtc_engine_integration_test_delegate.cc  iris_rtc_engine_integration_test_delegate.h  iris_rtc_engine_integration_test_helplers.cc  iris_rtc_engine_integration_test_helplers.h  rtc_event_handler_test.cc  rtc_event_handler_test.h
integration_test_app/iris_integration_test/unittest/: CMakeLists.txt  iris_rtc_engine_integration_test_helpers_unittest.cc  main.cc
internal/: deps_summary.txt
ios/: .gitignore  AgoraRtcWrapper.podspec  agora_rtc_engine.podspec  agora_rtc_ng.podspec
lib/: agora_rtc_engine.dart  agora_rtc_engine_debug.dart  agora_rtc_engine_web.dart  agora_rtc_engine_web.ng.dart  agora_rtc_ng.dart  agora_rtc_ng_web.dart  agora_rte_engine.dart  agora_rte_engine_web.dart  enums.dart  media_recorder.dart  rtc_channel.dart  rtc_engine.dart  rtc_local_view.dart  rtc_remote_view.dart
linux/: CMakeLists.txt  agora_rtc_engine_plugin.cc  agora_rtc_engine_plugin.h  plugin_configuration.mk
macos/: .gitignore  AgoraRtcWrapper.podspec  agora_rtc_engine.podspec  agora_rtc_ng.podspec
ohos/: .gitignore  build-profile.json5  index.ets  oh-package.json5  preinstall.sh
scripts/: archive_changelog.sh  artifacts_version.sh  build-android-arch.sh  build-android.sh  build-internal-testing-ios.sh  build-internal-testing-macos.sh  build-internal-testing.sh  build-ios-arch.sh  build-iris-all.sh  build-iris-android.sh  build-iris-ios.sh  build-iris-macos-arch.sh  build-iris-macos.sh  build-iris-web.sh  build-iris-windows.sh  build-mac.sh  change_publisher.sh  check_android15_16k_page_alignment.sh  code_gen.sh  download_unzip_iris_cdn_artifacts.sh  exportPlistLab.plist  sync-oc.sh  (+4 more)
test_shard/iris_tester/cxx/: CMakeLists.txt  build-macos.sh  ios.toolchain.cmake  render_configs_dart.yaml
test_shard/iris_tester/cxx/src/: iris_debug.cc  iris_debug.h
test_shard/iris_tester/cxx/src/event_triggers/: rtcengine_eventhandler_trigger.hpp
test_shard/iris_tester/cxx/src/fake/: fake_iaudiodevicemanager.hpp  fake_ilocalspatialaudioengine.hpp  fake_imediaplayer.hpp  fake_imusiccontentcenter.hpp  fake_irtcengineex.hpp  fake_string.hpp
test_shard/iris_tester/cxx/src/fake_gen/: fake_iagoraparameter_internal.hpp  fake_iaudiodevicecollection_internal.hpp  fake_iaudiodevicemanager_internal.hpp  fake_ilocalspatialaudioengine_internal.hpp  fake_imediaengine_internal.hpp  fake_imediaplayer_internal.hpp  fake_imediarecorder_internal.hpp  fake_imusiccontentcenter_internal.hpp  fake_imusicplayer_internal.hpp  fake_irtcengineex_internal.hpp  fake_ivideodevicemanager_internal.hpp
windows/: .gitignore  CMakeLists.txt  PluginInfo.props  agora_render_performance_monitor.cc  agora_rtc_channel_plugin.cc  agora_rtc_device_manager_plugin.cc  agora_rtc_engine_plugin.cc  agora_rtc_engine_plugin.cpp  agora_rtc_engine_plugin.h  agora_rtc_engine_plugin_c_api.cpp  agora_rtc_ng_plugin.cpp  agora_rtc_ng_plugin_c_api.cpp  agora_texture_view_factory.cc  call_api_method_call_handler.cc  plugin.vcxproj  texture_render.cc  video_view_controller.cc
windows/cmake/: DownloadSDK.cmake
windows/include/agora_rtc_engine/: agora_render_performance_monitor.h  agora_rtc_channel_plugin.h  agora_rtc_device_manager_plugin.h  agora_rtc_engine_plugin.h  agora_texture_view_factory.h  call_api_method_call_handler.h  texture_render.h  video_view_controller.h
windows/include/agora_rtc_ng/: agora_rtc_ng_plugin.h  agora_rtc_ng_plugin_c_api.h  texture_render.h  video_view_controller.h
windows/include/iris/: iris_base.h  iris_c_api.h  iris_channel.h  iris_device_manager.h  iris_engine.h  iris_event_handler.h  iris_raw_data.h  iris_raw_data_plugin.h  iris_renderer.h  iris_rtc_base.h  iris_rtc_c_api.h  iris_rtc_channel.h  iris_rtc_device_manager.h  iris_rtc_engine.h  iris_rtc_raw_data.h  iris_rtc_renderer.h
(+1191 files in other folders)
